V3.4 cambios  de logica y a la tabla